# DE_Zoomcamp_2026

./: .gitignore  README.md
Mod 1/pipeline/: .gitignore  ingest_data.py  notebook.ipynb  notebook.py  pipeline.py
Mod 1/pipeline/.ipynb_checkpoints/: notebook-checkpoint.ipynb
Mod 1/pipeline/Assignment/: Assignment_1.md
Mod 1/terraform/: main.tf  variables.tf
Mod 1/test/: file1.txt
Mod 2/Assignment/: Assignment_2.md
Mod 3/: .gitignore  DLT_Load_Taxi_Trips_GBQ.ipynb  load_taxi_trips_GCS.py  main.py  pyproject.toml
Mod 3/Assignment/: Assignment_3.md
Mod 4/: .gitignore  main.py  pyproject.toml
Mod 4/Assignment/: Assignment_4.md
Mod 4/taxi_rides_ny/: .gitignore  ingest_fhv.py
Mod 4/taxi_rides_ny/macros/: get_vendor_names.sql
Mod 4/taxi_rides_ny/models/marts/: dim_vendors.sql  dim_zones.sql  fct_monthly_zone_revenue.sql  fct_trips.sql
Mod 4/taxi_rides_ny/models/staging/: sources.yml  (+1 more)
Mod 5/Assignment/: Assignment_5.md
Mod 5/zoomcamp/pipeline/: pipeline.yml
Mod 6/: .gitignore
Mod 6/Assignment/: Assignment_6.md  homework_6.ipynb
Mod 6/code/: pyspark.ipynb  test_pyspark.ipynb
Mod 7/: main.py  pyproject.toml
Mod 7/Assignment/: Assignment_7.md
Mod 7/notebooks/: consumer.ipynb  models.py  producer.ipynb
Mod 7/src/consumers/: assignment_consumer.py  consumer_test.py
Mod 7/src/job/: assignment_lstreak_job.py  assignment_puloc5_job.py  pass_through_job.py
Mod 7/src/producers/: assignment_producer.py  models.py
Workshop 1/taxi-pipeline/: pyproject.toml
Workshop 1/taxi-pipeline/Workshop_Assignment/: Workshop Assignment_1.md
(+1 files in other folders)
