[project]
name = "mod-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[bigquery,gs]>=1.21.0",
    "duckdb>=1.4.4",
    "google-cloud-bigquery-storage>=2.36.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
